@@ -1,5 +1,6 @@
 0.04
  - Add error check for random_day_month_year() method.
+ - Add error check for random_day_month() method.
  - Add some error checks to random_day() method.
  - Add some tests.
  - Fix LICENSE file.
